--- a/content/html/en/blog.erb
+++ b/content/html/en/blog.erb
@@ -28,9 +28,9 @@ noSubMenu: true
 
 <div id="elementblock">
 <ul class="menu">
-<li> <a href="#last-articles"><%= number_of_articles %> latest articles </a> </li>
-<li> <a href="#tagcloud">Tag Cloud </a></li>
-<li> <a href="#archives">Achives </a></li>
+<li> <a href="#last-articles">&darr; <%= number_of_articles %> latest articles &darr;</a> </li>
+<li> <a href="#tagcloud">&darr; Tag Cloud &darr;</a></li>
+<li> <a href="#archives">&darr; Achives &darr;</a></li>
 </ul>
 </div>
 
