--- a/multi/blog.erb
+++ b/multi/blog.erb
@@ -28,11 +28,11 @@ noSubMenu: true
 
 <div id="elementblock">
 <ul class="menu">
-en: <li> <a href="#last-articles"><%= number_of_articles %> latest articles </a> </li>
-fr: <li> <a href="#last-articles">Les <%= number_of_articles %> derniers articles </a></li>
-en: <li> <a href="#tagcloud">Tag Cloud </a></li>
-fr: <li> <a href="#tagcloud">Nuage de mots clés </a></li>
-<li> <a href="#archives">Achives </a></li>
+en: <li> <a href="#last-articles">&darr; <%= number_of_articles %> latest articles &darr;</a> </li>
+fr: <li> <a href="#last-articles">&darr; Les <%= number_of_articles %> derniers articles &darr;</a></li>
+en: <li> <a href="#tagcloud">&darr; Tag Cloud &darr;</a></li>
+fr: <li> <a href="#tagcloud">&darr; Nuage de mots clés &darr;</a></li>
+<li> <a href="#archives">&darr; Achives &darr;</a></li>
 </ul>
 </div>
 
