--- a/content/html/fr/blog.erb
+++ b/content/html/fr/blog.erb
@@ -28,9 +28,9 @@ noSubMenu: true
 
 <div id="elementblock">
 <ul class="menu">
-<li> <a href="#last-articles">Les <%= number_of_articles %> derniers articles </a></li>
-<li> <a href="#tagcloud">Nuage de mots clés </a></li>
-<li> <a href="#archives">Achives </a></li>
+<li> <a href="#last-articles">&darr; Les <%= number_of_articles %> derniers articles &darr;</a></li>
+<li> <a href="#tagcloud">&darr; Nuage de mots clés &darr;</a></li>
+<li> <a href="#archives">&darr; Achives &darr;</a></li>
 </ul>
 </div>
 
