--- a/layouts/main.html
+++ b/layouts/main.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   <!-- Place favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-  <link rel="shortcut icon" href="<%=@config[:webprefix]%>/img/favicon.ico" />
+  <link rel="shortcut icon" href="/img/favicon.ico" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
 
