Fixed most blog view issues

--- a/layouts/article.html
+++ b/layouts/article.html
@@ -105,10 +105,15 @@
         <div id="webpageinfo">
             <%=tradOf(:copyright) %>
             <div>
+                Designed by <a href="htt://yannesposito.com">Yann Esposito</a>
+            </div>
+            <div>
                 <%= tradOf(:entirely_done_with) %>
-                <a href="http://www.vim.org">Vim</a>
+                <a href="http://www.vim.org">vim</a>,
+                <a href="http://nanoc.stoneship.org">nanoc</a>,
+                <a href="http://compass-style.org">compass</a>
                 <%= tradOf(:and) %> 
-                <a href="http://nanoc.stoneship.org">nanoc</a>
+                <a href="http://html5boilerplate">html5boilerplate</a>
             </div>
         </div>
         </footer>
